--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for AmnabisFlags
 
+1.4.1 - Mod updated for 1.4 and passed autotests.
+Used DeepL to update translations for Russian
+
+
 1.3.1 - Russian translation added, thanks Dmitry6!
 
 
